# iarray-community

./: IARRAY_METALAYER.rst  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
doc/: requirements_doc.txt
doc/source/: conf.py  index.rst  installing.rst  reference.rst
doc/source/_static/: custom.css
doc/source/reference/: config.rst  constructors.rst  ndarray.rst
doc/source/reference/autofiles/config/: iarrayce.Codecs.rst  iarrayce.Filters.rst  iarrayce.Store.rst  iarrayce.config.rst  iarrayce.get_config.rst  iarrayce.reset_config_defaults.rst  iarrayce.set_config.rst
doc/source/reference/autofiles/config-class/: iarrayce.Config.rst
doc/source/reference/autofiles/constructors/: iarrayce.empty.rst  iarrayce.full.rst  iarrayce.ones.rst  iarrayce.zeros.rst
doc/source/reference/autofiles/iarray/: iarrayce.IArray.blocks.rst  iarrayce.IArray.chunks.rst  iarrayce.IArray.copy.rst  iarrayce.IArray.cratio.rst  iarrayce.copy.rst  (+9 more)
examples/: requirements.txt  simple.py  sparse.py
examples/data/: random_data.iarray  test_rand_float32.iarray  test_rand_float64.iarray
iarray-community/tests/: test_constructors.py
iarray_community/: __init__.py  config_params.py  constructors.py  iarray.py  utils.py
iarray_community/tests/: test_constructors.py  test_resize.py  test_utils.py
iarrayce/: __init__.py  _constructors.py  _iarray.py  config_params.py  constructors.py  iarray.py  utils.py
iarrayce/tests/: test_utils.py
src/iarrayce/: config_params.py  iarray.py  utils.py
tests/: test_constructors.py  test_utils.py
