[metadata]
name = iarrayce
version = 0.0.1
author = ironArray Developers Team
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ironarray.io
project_urls =
    Bug Tracker = https://github.com/ironArray/ironArray-CE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    iarrayce
python_requires = >=3.6
install_requires =
    caterva
    numpy
