[metadata]
name = iarray-community
version = attr: iarray_community.__version__
author = ironArray Development Team
author_email = contact@ironarray.io
description = An efficient, flexible and fast toolkit for managing your data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ironarray.io
project_urls =
    Bug Tracker = https://github.com/ironArray/iarray-community/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
licence = GNU General Public License v3 (GPLv3)

[options]
packages =
    iarray_community
python_requires = >=3.7
install_requires =
    caterva>=0.6.0
    numpy
